# hatch-plugin

./: README.md  pyproject.toml
src/hatch_plugin/: __about__.py  __init__.py  __main__.py  hooks.py  plugin.py
src/hatch_plugin/cli/: __init__.py
